# kv_compaction_qwen2_clean

./: .gitignore  README.md  pyproject.toml
configs/: README.md
configs/qwen25_smoke/: qwen2_5_3b.yaml
data/: README.md
data/smoke_test/: local_placeholder.json
docs/: architecture.md  plan.md  repo_contract.md  reproduction.md  results.md
examples/qwen25_smoke/: behavioral_eval_summary.json  service_demo_summary.json
scripts/: export_example_summaries.py  run_behavioral_eval.py  run_service_demo.py  write_boundary_collection.py  write_feature_harvest.py  write_query_coreset.py  write_runtime_plan.py
src/kv_compaction_clean/: __init__.py  behavioral_eval.py  beta_fit.py  boundary_collection.py  cli.py  config.py  context_loader.py  coreset.py  data_types.py  feature_harvester.py  key_selection.py  model_runtime.py  prototype_bank.py  query_controls.py  roadmap.py  runtime_compaction.py  service_demo.py
tests/: __init__.py  test_behavioral_eval.py  test_beta_fit.py  test_boundary_collection.py  test_config_and_context.py  test_coreset.py  test_examples.py  test_feature_harvester.py  test_key_selection.py  test_model_runtime.py  test_prototype_bank.py  test_query_controls.py  test_repo_shape.py  test_runtime_compaction.py  test_service_demo.py
