[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-compaction-clean"
version = "0.1.0"
description = "Clean smoke-test artifact for KV compaction experiments."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
