[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-compaction-clean"
version = "0.1.0"
description = "Clean smoke-test artifact for KV compaction experiments."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6"]

[project.scripts]
kv-clean-smoke = "kv_compaction_clean.cli:run_smoke_eval"
kv-clean-demo = "kv_compaction_clean.cli:run_service_demo"
kv-clean-export-examples = "kv_compaction_clean.cli:export_example_summaries"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
